# backend-iot

./: pyproject.toml
app/: database.py  main.py  mqtt.py
app/routers/: sensor_data.py
